samples/_failures_safe/1761212687_a8a156_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a718391.c: In function ‘main’:
./samples/SAFE/__tmp_0a718391.c:176:9: error: expected declaration or statement at end of input
  176 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_0a718391.c:176:9: error: expected declaration or statement at end of input
